Fix: fix different issues (#32)
* feat: add Name to Header

* fix: change headers to Capital letter

* fix: PUT requests on ExerciseController

* fix: POST requests on WorkoutController

* fix: save-button on WorkoutViewPage

* fix: change into DTO for better code

* fix: Table in ExerciseCard should not be able to see if there is no data

* fix: change header on RegisterPage

* feat: add date in Workout data structure for future features

* fix: refactor filter logic to create an exercise/ workout even if another user uses the name

* feat: add icon in Workout data structure for future features

* fix: fix all tests